Revert "Edit & Trash graphics + Mobile App items"
This reverts commit 01a1752ab4ceaa02a61b44be9ca72360bf78d8e8.

--- a/Mobile App.framer/framer/config.json
+++ b/Mobile App.framer/framer/config.json
@@ -10,7 +10,7 @@
   "deviceType" : "apple-iphone-7-silver",
   "projectId" : "3E4A8743-37DD-46D6-8B5A-2CF4837509A6",
   "deviceOrientation" : 0,
-  "selectedHand" : "iphone-hands-2",
+  "selectedHand" : "",
   "foldedCodeRanges" : [
 
   ],
