Added a keyboard animation for the edit buttons on the reminders

--- a/Fridge Display.framer/framer/config.json
+++ b/Fridge Display.framer/framer/config.json
@@ -7,7 +7,7 @@
   "propertyPanelToggleStates" : {
     "Filters" : false
   },
-  "deviceType" : "apple-ipad-pro-silver",
+  "deviceType" : "apple-ipad-pro-space-gray",
   "projectId" : "EE76AF67-0A47-4056-BD11-0B329AC937AB",
   "deviceOrientation" : 0,
   "selectedHand" : "",
